--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "illuminate/support": "^5.1"
+        "illuminate/support": "^5.1",
+        "league/csv": "^7.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.7",
